--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" href="/VueTypewriterComposable/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Use Typewriter Demo</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/holiday.css@0.9.8" />
-  <script type="module" crossorigin src="/assets/index.042e82f0.js"></script>
-  <link rel="stylesheet" href="/assets/index.86c7b872.css">
+  <script type="module" crossorigin src="/VueTypewriterComposable/assets/index.042e82f0.js"></script>
+  <link rel="stylesheet" href="/VueTypewriterComposable/assets/index.86c7b872.css">
 </head>
 <body>
   <div id="app"></div>
