deploy: e85e01adb64fb0e9529bffa1ce58eaf7a445e133

--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <link rel="icon" href="/VueTypewriterComposable/favicon.ico" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Use Typewriter Demo</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/holiday.css@0.9.8" />
-  <script type="module" crossorigin src="/VueTypewriterComposable/assets/index.64483a13.js"></script>
-  <link rel="stylesheet" href="/VueTypewriterComposable/assets/index.86c7b872.css">
-</head>
-<body>
-  <div id="app"></div>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" href="/VueTypewriterComposable/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Use Typewriter Demo</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/holiday.css@0.9.8"
+    />
+    <script type="module" crossorigin src="/VueTypewriterComposable/assets/index.6ebcbf0d.js"></script>
+    <link rel="stylesheet" href="/VueTypewriterComposable/assets/index.86c7b872.css">
+  </head>
+  <body>
+    <div id="app"></div>
+    
+  </body>
 </html>
